test/libyul/yulSyntaxTests/hex_assignment.yul
{
    let x := hex"0011"
}
// ----
// ParserError 3772: (15-24): Hex literals are not valid in this context.
